2015-08-04  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * {various} - Eliminate memory allocation issues associated with errors
	during string or file input.
   * main/main.c - Manage initial directory used by file open/save dialogs.

2015-08-03  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c - Fix handling of a number of issues in the new input
	dialogs, especially avoid re-prompting when the "Cancel" button
	is pressed (Github issue #6).
   * segmenting/painting.c - Don't require cursor to move before labeling
	voxels (Github issue #7).

2015-06-29  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/call_globals.c, segmenting/painting.c: Fix some memory
	access bugs.

2015-06-18  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/quit.c, main/graphics.c, et al.: Save and restore
	window state from ~/.mni-displayrc

2015-06-16  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c: Fix input fallback behavior when zenity not found.
   * slice_window/colour_coding: Fix issue with double-free of labels_filename.
   * slice_window/outline.c: Improve color assignment algorithm.
   * menu/cursor_pos.c: Use nonspatial_voxel_to_world() to convert time
	from voxel to world.

2015-06-11  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Lots of new comments, reformatting, and warning fixes.
   * various: Use get_cursor_origin() to get the cursor location.
   * slice_window/outline.c: Fix outline drawing to use the plane
	normal in world rather than voxel coordinates.
   * main/{event_loop.c, graphics.c, display.c}: Some simplification.
   * segmenting/painting.c: Fix a few issues with painting, especially when
	the brush is dragged outside the window bounds.
   * menu/*, markers/*: Streamline the menu and object window drawing code.
   * menu/*: Use '1' and '2' for "previous time point" and "next time point"
	commands.
2015-06-02  Robert D. Vincent <robert.d.vincent@mcgill.ca>